# linkedInXbrowserbase_SessionCollector

./: .gitignore  app.py  config.py  dependencies.py  dump.rdb  linkedin_session.py  pyproject.toml  requirements.txt  session_manager.py  session_manager_factory.py  session_processor.py  user-guide.md
linkedin_session_capture_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_linkedin_session.py  test_session_manager.py
