[project]
name = "linkedin-session-capture-api"
version = "2.0.0"
description = "A scalable API to capture LinkedIn session data using Browserbase and Redis."
authors = [{ name = "Faizan", email = "faizanfaizy97@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "redis",
    "browserbase",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "tenacity",
    "playwright",
]

[tool.setuptools.packages.find]
include = ["app*", "config*", "dependencies*", "session_manager*", "linkedin_session*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"